[gd_scene load_steps=4 format=2]

[ext_resource path="res://NPC/NPC.gd" type="Script" id=1]
[ext_resource path="res://NPC/InteractIndicator.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 9.5 )

[node name="NPC" type="Area2D"]
script = ExtResource( 1 )
_name = "BOB"
lines = [ "Bob:Did you know that cabybaras are swog", "Nano:They have fur", "Bob:and like men" ]

[node name="Label" type="Label" parent="."]
margin_bottom = 14.0
align = 1
valign = 1

[node name="Tween" type="Tween" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="InteractIndicator" type="Sprite" parent="."]
position = Vector2( 1, -33 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="InteractStartPos" type="Position2D" parent="."]
position = Vector2( 0, -28 )

[connection signal="area_entered" from="." to="." method="_on_NPC_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_NPC_area_exited"]
